--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,6 @@ all = ["boto3>=1.28.0", "botocore>=1.31.0", "google-cloud-storage>=2.10.0", "azu
 
 [project.scripts]
 pendragondi-cloud-audit = "pendragondi_cloud_audit.cli:app"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
