--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pendragondi-cloud-audit"
-version = "0.3.0"
+version = "0.3.1"
 description = "PendragonDI Cloud Audit – local tool to detect stale, redundant, or inefficient storage in cloud buckets."
 readme = "README.md"
 requires-python = ">=3.9"
@@ -23,4 +23,5 @@ pendragondi-cloud-audit = "pendragondi_cloud_audit.cli:app"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
-packages = ["pendragondi_cloud_audit"]
+packages = ["pendragondi_cloud_audit", "pendragondi_cloud_audit.providers"]
+
